--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mongo-java-driver-2.9.3.jar=C:\\Users\\bruno\\Documents\\Ferramentas para desenvolvimento\\Driver MongoDb - Java\\mongo-java-driver-2.9.3.jar
 user.properties.file=C:\\Users\\bruno\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
